<!--
  Copyright (C) 2016 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Snapyr Imp Test</string>
    <string name="introduction_title">Snapyr Implementation Test</string>
    <string name="sample_introduction">This sample demonstrates a basic Snapyr SDK integration.
        \n\nStart by tapping <b>Identify</b>, which will use a hard-coded user (named "testUser").
        \n\nThen tap <b>Track</b>, which will send a hard-coded track event (named "testEvent").
        \n\nBy default, Snapyr buffers events on the device and sends them to the API periodically.
        \n Tap <b>Flush</b> after calling Identify and Track to immediately send to the API in order
        to test more quickly.
    </string>
    <string name="sample_freeform_introduction">The buttons below demonstrate features only
        available in <b>free-form multi-window mode</b>.</string>
    <string name="do_identify_testuser">Identify testUser</string>
    <string name="do_track_testevent">Track testEvent</string>
    <string name="do_flush">Flush</string>


    <string name="activity_description_basic">This Activity was launched in a new task without any
        additional flags or options.
    </string>
    <string name="activity_description_unresizable">This activity is set as unresizable in the
        AndroidManifest. This is done by setting the <i>resizeableActivity</i> property to
        <i>false</i> for this activity.
    </string>
    <string name="activity_adjacent_description">This activity was launched with the flag
        <b>Intent.FLAG_ACTIVITY_LAUNCH_ADJACENT</b>.\n\nIf possible, it has been launched into the
        adjacent area from the activity that started it.\nThis is only a hint to the system. For
        example - if the application is not in split-screen mode, it will be launched full-screen.
        If it is launched in the same task as the initial Activity, it will retain its activity
        properties and its location.
    </string>
    <string name="activity_custom_description">This activity handles configuration changes
        itself.\n\nIn the AndroidManifest, this activity has been configured to receive callbacks
        for <b>screenSize|smallestScreenSize|screenLayout|orientation</b>
        changes.\nTry resizing this activity to different sizes to see which configuration
        properties change.
    </string>
    <string name="activity_bounds_description">This activity has been launched with a launch bounds
        set in its intent. The bounds define the area into which the activity should be launched.
        \n\nNote that this flag only applies in free-form mode.
    </string>
    <string name="activity_minimum_description">This activity has a minimum size.\nIt was launched
        into the top/end corner with a a default size of 750dp by 500dp, with a minimum size of 750dp
        as defined in its <b>layout attribute in the AndroidManifest definition</b>.
        \n\nNote that this Activity was launched in a different task, otherwise the properties from
        the Activity that launched this one would have been applied.
    </string>
</resources>
